archive/onyxia/infra/argocd/gateway-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gw
  namespace: argocd
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.lan.wittner.tech"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-lan-tls
